hard-gists/d49f6fd44b9e690a6ac5/run.log
=== Docker Run Log for d49f6fd44b9e690a6ac5 ===
Started at: Mi 29. Okt 20:25:16 CET 2025

[2025-10-29 20:25:16] START: Running container for d49f6fd44b9e690a6ac5
[2025-10-29 20:25:17] SUCCESS: Container 3ed82daef99941ceece13f114c2ed88ecfc7d8c6b0db05e54fe609260296896c started for d49f6fd44b9e690a6ac5
=== Container logs for d49f6fd44b9e690a6ac5 ===
  File "/snippet.py", line 17
    print "({0}, {1}, {2}, {3})".format(x, y, w, h)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d49f6fd44b9e690a6ac5 ===
[2025-10-29 20:25:19] INFO: Container 3ed82daef99941ceece13f114c2ed88ecfc7d8c6b0db05e54fe609260296896c has stopped
